Fix 404: generate firebase-config to public, run full Next build on Vercel

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run generate-firebase-config && next build",
     "start": "next start",
     "logo-transparent": "node scripts/make-logo-transparent.js",
     "generate-firebase-config": "node scripts/generate-firebase-config.js"
