Subscription checkout, Stripe setup docs, 404 error handling
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,13 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 # Optional
 # NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
+
+# Stripe (subscription checkout, tips, customer portal, webhook)
+# Get keys from Stripe Dashboard → Developers → API keys.
+STRIPE_SECRET_KEY=sk_live_xxx
+# Subscription: use your existing recurring price ID (Dashboard → Products → [Your product] → Price → id starts with price_)
+STRIPE_PRICE_ID_MONTHLY=price_xxx
+# Webhook (Dashboard → Developers → Webhooks → Add endpoint → signing secret)
+STRIPE_WEBHOOK_SECRET=whsec_xxx
+# Optional: used by tip-checkout and customer-portal
+# PUBLIC_APP_URL=https://stormijxo.com
