Stability checklist, verify:smoke, React migration (Firebase without Scripts)
- Add docs/STABILITY_CHECKLIST.md and docs/REACT_MIGRATION.md

- Add npm run verify:smoke (build)

- Load .env.local in generate-firebase-config.js, support NEXT_PUBLIC_FIREBASE_*

- Remove Firebase Script tags from app/page.tsx and app/layout.tsx

- Expand .env.example with all required vars

Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next dev",
     "build": "npm run generate-firebase-config && next build",
     "start": "next start",
+    "verify:smoke": "npm run build",
     "logo-transparent": "node scripts/make-logo-transparent.js",
     "generate-firebase-config": "node scripts/generate-firebase-config.js"
   },
