Treats store, content cleanup, Firestore rules
- Enable treats store (NEXT_PUBLIC_TREATS_STORE); env name and default

- Remove member count section from Content landing and landing CTA

- Treats collection: allow read for all (fix permission error); write for auth

- Dashboard Top purchases copy; clear post form on edit/delete exit

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -47,5 +47,7 @@ STRIPE_WEBHOOK_SECRET=
 # -----------------------------------------------------------------------------
 # Optional
 # -----------------------------------------------------------------------------
+# Set to "false" to hide the Treats store nav and show "Coming soon" on /treats (set "true" to enable; default when unset: enabled)
+# NEXT_PUBLIC_TREATS_STORE=true
 # Base URL for Stripe success/cancel redirects (defaults to https://stormijxo.com if unset)
 # PUBLIC_APP_URL=http://localhost:3000
