Treats: merge defaults in admin, card styling, emoji picker on name/description
Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "emoji-picker-react": "^4.18.0",
     "firebase": "^12.9.0",
     "firebase-admin": "^13.6.1",
     "next": "^16.1.6",
