Premium studio: AI chatbot, profiles, session summaries, media from library, video playback, profiles search
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ NEXT_PUBLIC_FIREBASE_APP_ID=
 # Optional (Analytics)
 # NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 
+# Firebase Admin — alternative: base64-encoded service account JSON (Premium Studio / API)
+# FIREBASE_SERVICE_ACCOUNT_KEY_BASE64=<base64 of full JSON>
+
 # -----------------------------------------------------------------------------
 # Firebase Admin (server) — REQUIRED for customer-portal and any API that uses
 # Firestore/Admin SDK (e.g. look up member by Stripe customer id).
@@ -47,6 +50,12 @@ STRIPE_WEBHOOK_SECRET=
 # -----------------------------------------------------------------------------
 # Optional
 # -----------------------------------------------------------------------------
+# Premium Studio: AI captions and chat session suggestions (Gemini)
+# GEMINI_API_KEY=   # or GOOGLE_API_KEY=
+# Rate limiting (optional; in-memory fallback if unset)
+# UPSTASH_REDIS_REST_URL=
+# UPSTASH_REDIS_REST_TOKEN=
+
 # Set to "false" to hide the Treats store nav and show "Coming soon" on /treats (set "true" to enable; default when unset: enabled)
 # NEXT_PUBLIC_TREATS_STORE=true
 # Base URL for Stripe success/cancel redirects (defaults to https://stormijxo.com if unset)
